--- a/style.css
+++ b/style.css
@@ -13,10 +13,6 @@ nav {
   height: 180px;
 }
 
-nav alt {
-  margin: 0, auto;
-}
-
 nav #box {
   margin: 0px auto 0;
   padding: 20px;
@@ -44,7 +40,7 @@ nav #link {
 nav #link a {
   font-size: 20px;
   font-weight: 100;
-  color: #8ABFDF;
+  color: #ffffff;
 }
 
 nav #link a:nth-child(2) {
@@ -64,7 +60,7 @@ nav #link2 {
 nav #link2 a {
   font-size: 20px;
   font-weight: 100;
-  color: #8ABFDF;
+  color: #ffffff;
 }
 
 nav #link2 a:nth-child(2) {
@@ -124,11 +120,15 @@ footer {
   padding: 25px;
   text-align: center;
   background: #3C98CC;
-  color: white;
+}
+
+footer #footer {
+  margin: 0 auto;
+  width: 1200px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 90px 180px 580px 400px;
-      grid-template-columns: 90px 180px 580px 400px;
+  -ms-grid-columns: 180px 580px 440px;
+      grid-template-columns: 180px 580px 440px;
 }
 
 footer h1 {
@@ -138,6 +138,25 @@ footer h1 {
   margin-top: 50px;
   line-height: 30px;
   font-weight: 450;
-  color: #8ABFDF;
+  color: #ffffff;
+}
+
+footer #right {
+  margin-top: 55px;
+}
+
+footer #icon {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 90px 100px 100px 100px;
+      grid-template-columns: 90px 100px 100px 100px;
+}
+
+footer #copy {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 8px;
+  font-weight: 450;
+  color: #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
